### Build 14
- Fix bug that a corrupt savegame could cause gametime to go backwards (a
  GameLogicCommand could have a duetime in the past without being detected as
  corrupt during load). (svn:r4460)
- Fix invalid memory access bug (causisng random behaviour) when a section file
  inside a zip-archive was missing a newline at the end. (svn:r4443)
- Fix bug that trigger building could count large buildings sevaral times
  because they occupy several nodes on the map. (svn:r4441)
- Added Italian translation (svn:r4435, svn:r4436)
- Fix drawing of text with non-latin1 characters. (svn:r4421)
- When a soldier steps outside his territory during attack, he searches for
  militarysites with defenders. Previously he chose them from any other player.
  Now only choose defenders from the player whose territory the soldier steps
  on. (svn:r4410)
- Exit with an error when incompatible command line parameters are given,
  instead of ignoring it. (svn:r4406)
- Allow starting a replay from the command line by giving the --replay=FILENAME
  parameter. If just --replay is given, the program goes directly to the replay
  file selection menu. (svn:r4405)
- Fix display of multiline editoboxes when the text has more than one
  consecutive linebreak. (svn:r4395)
- Fix navigation in multiline editboxes. When the last line was empty and the
  text cursor was at the end of the line above, it was not possible to move the
  cursor to the last line with the down arrow key. (svn:r4394)
- Fix bug that the text cursor was not visible when at the beginning of a line
  (in a single- or multiline editbox). (svn:r4393).
- Give spectators (see-only) access to the building and economy configuration
  windows. Same for players with see-all right (debug builds). (svn:r4380,
  svn:r4399)
- When a soldier can not move to its opponent during an attack, do not give up
  and quit the program. Instead, let the soldier desert without punishment.